シングル動作確認